src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Org_Sub_Type_Other__c</fullName>
        <label>Org Sub-Type Other</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Sub_Type__c</fullName>
        <label>Org Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Org_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>-- Select One --</fullName>
                    <default>true</default>
                    <label>-- Select One --</label>
                </value>
                <value>
                    <fullName>CBO - Children / Youth Program</fullName>
                </value>
                <value>
                    <fullName>CBO - Faith-Based Organization</fullName>
                </value>
                <value>
                    <fullName>CBO - Library / Museum</fullName>
                </value>
                <value>
                    <fullName>CBO - Service Club</fullName>
                </value>
                <value>
                    <fullName>Individual / Family</fullName>
                </value>
                <value>
                    <fullName>College/University</fullName>
                    <label>School - College/University</label>
                </value>
                <value>
                    <fullName>School District</fullName>
                    <label>School - District</label>
                </value>
                <value>
                    <fullName>Elementary School</fullName>
                    <label>School - Elementary</label>
                </value>
                <value>
                    <fullName>High School</fullName>
                    <label>School - High School</label>
                </value>
                <value>
                    <fullName>Jr. High / Middle School</fullName>
                    <label>School - Jr. High / Middle</label>
                </value>
                <value>
                    <fullName>School - Library</fullName>
                </value>
                <value>
                    <fullName>Other School</fullName>
                    <label>School - Other</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_Type_Other__c</fullName>
        <label>Org Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Type__c</fullName>
        <label>Org Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-- Select One --</fullName>
                    <default>true</default>
                    <label>-- Select One --</label>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Individual / Family</fullName>
                </value>
                <value>
                    <fullName>Community-Based Organization</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>